[package]
name = "dafu-report"
version = "0.1.0"
authors = ["haryu703"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.4"
easy-scraper = "0.1.1"
tokio = { version = "0.2", features = ["full"] }
clap = { version = "2.33.0", features = [] }
